# sha-assist

./: LICENSE  README.md  pyproject.toml  sha-assist.py  sha_assist.py
tests/: test_sha_assist.py
utils/: validate.py
